# Agent-project-New

./: .gitignore  README.md  data_dict_example.json  pyproject.toml  report.txt  requirements.txt  setup.py
.kiro/specs/multi-agent-data-analyzer/: design.md  requirements.md  tasks.md
multi_agent_analyzer/: __init__.py  __main__.py  config.py  main_controller.py  terminal_interface.py
multi_agent_analyzer/agents/: __init__.py  analyzer_agent.py  base_agent.py  collector_agent.py  decision_agent.py  reporter_agent.py
multi_agent_analyzer/core/: __init__.py  enums.py  llm_coordinator.py  message_protocol.py  models.py  shared_context.py
multi_agent_analyzer/utils/: __init__.py
results/: partial_results_20251228_224537.json  partial_results_20251228_230833.json
tests/: __init__.py  test_base_agent.py  test_infrastructure.py  test_llm_coordinator.py  test_shared_context_and_protocol.py
